RESOLVED FIXED148145
More work on simplifying the WebSQL code
https://bugs.webkit.org/show_bug.cgi?id=148145
Summary More work on simplifying the WebSQL code
Anders Carlsson
Reported 2015-08-18 15:28:30 PDT
More work on simplifying the WebSQL code
Attachments
Patch (11.96 KB, patch)
2015-08-18 15:55 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-08-18 15:55:08 PDT
WebKit Commit Bot
Comment 2 2015-08-18 15:57:43 PDT
Attachment 259305 [details] did not pass style-queue: ERROR: Source/WebCore/Modules/webdatabase/SQLTransaction.cpp:98: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/Modules/webdatabase/SQLTransaction.cpp:100: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/Modules/webdatabase/SQLTransaction.cpp:101: One space before end of line comments [whitespace/comments] [5] Total errors found: 3 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2015-08-19 13:19:34 PDT
Note You need to log in before you can comment on or make changes to this bug.