More work on simplifying the WebSQL code https://bugs.webkit.org/show_bug.cgi?id=148145

Reviewed by Tim Horton.

Eliminate SQLTransaction::sendToBackendState.

* Modules/webdatabase/SQLTransaction.cpp:
(WebCore::SQLTransaction::stateFunctionFor):
Change sendToBackendState to unreachableState,

(WebCore::SQLTransaction::deliverTransactionCallback):
Call deliverTransactionErrorCallback directly and schedule RunStatements on the backend.

(WebCore::SQLTransaction::deliverTransactionErrorCallback):
Schedule CleanupAfterTransactionErrorCallback on the backend.

(WebCore::SQLTransaction::deliverStatementCallback):
Fold nextStateForTransactionError into here. Schedule backend states explicitly.

(WebCore::SQLTransaction::deliverQuotaIncreaseCallback):
Schedule RunStatements on the backend.

(WebCore::SQLTransaction::deliverSuccessCallback):
Schedule CleanupAndTerminate on the backend.

(WebCore::SQLTransaction::computeNextStateAndCleanupIfNeeded):
The return value of this function isn't used to make it return void.

(WebCore::SQLTransaction::nextStateForTransactionError): Deleted.
Remove this, it's been folded into deliverStatementCallback.

(WebCore::SQLTransaction::sendToBackendState): Deleted.
Get rid of this.

* Modules/webdatabase/SQLTransaction.h:
Update member functions.

* Modules/webdatabase/SQLTransactionBackend.cpp:
(WebCore::SQLTransactionBackend::openTransactionAndPreflight):
Just call runStatements() directly.

(WebCore::SQLTransactionBackend::cleanupAfterTransactionErrorCallback):
Just call cleanupAndTerminate() directly.

(WebCore::SQLTransactionBackend::shouldPerformWhilePaused): Deleted.
Get rid of an iOS member function that's no longer used.

* Modules/webdatabase/SQLTransactionBackend.h:
Remove member function.

Canonical link: https://commits.webkit.org/166304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188646 268f45cc-cd09-0410-ab3c-d52691b4dbfc