Source/WebCore/Modules/webdatabase/SQLTransactionBackend.h
@@ -65,10 +65,6 @@ public:
     void lockAcquired();
     void performNextStep();
 
-#if PLATFORM(IOS)
-    bool shouldPerformWhilePaused() const;
-#endif
-
     Database* database() { return m_database.get(); }
     bool isReadOnly() { return m_readOnly; }
     void notifyDatabaseThreadIsShuttingDown();
